{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 30,
  "lineage": "ced04268-0bef-e377-074f-df8cfabbefb4",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654431182:security-group/sg-0697b7c59c8d59a86",
            "description": "enable ssh access on port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0697b7c59c8d59a86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2 security group",
            "name_prefix": "",
            "owner_id": "654654431182",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2 security group"
            },
            "tags_all": {
              "Name": "ec2 security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b75da591fd179b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_res"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbbbcf70591320cd",
            "arn": "arn:aws:ec2:us-east-1:654654431182:elastic-ip/eipalloc-0bbbbcf70591320cd",
            "association_id": "eipassoc-060d580a7a8b73276",
            "domain": "vpc",
            "id": "eipalloc-0bbbbcf70591320cd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ef5a44244737637f",
            "private_dns": "ip-172-16-3-1.ec2.internal",
            "private_ip": "172.16.3.1",
            "public_dns": "ec2-44-207-110-7.compute-1.amazonaws.com",
            "public_ip": "44.207.110.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az1 eip"
            },
            "tags_all": {
              "Name": "nat gateway az1 eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1eb730ebf9350de",
            "arn": "arn:aws:ec2:us-east-1:654654431182:elastic-ip/eipalloc-0a1eb730ebf9350de",
            "association_id": "eipassoc-0ca4274f3788b7ef3",
            "domain": "vpc",
            "id": "eipalloc-0a1eb730ebf9350de",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00b23dc10581c37b3",
            "private_dns": "ip-172-16-29-178.ec2.internal",
            "private_ip": "172.16.29.178",
            "public_dns": "ec2-54-243-208-161.compute-1.amazonaws.com",
            "public_ip": "54.243.208.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az2 eip"
            },
            "tags_all": {
              "Name": "nat gateway az2 eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:654654431182:instance/i-0b79902f3d550bfa1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b79902f3d550bfa1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mern-sai",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a36ab0c88a2927d",
            "private_dns": "ip-172-16-136-164.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.136.164",
            "public_dns": "ec2-35-153-31-246.compute-1.amazonaws.com",
            "public_ip": "35.153.31.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0263a5f8d7049b599",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c15331711522ba0",
            "tags": {
              "Name": "ec2-private-instance-1"
            },
            "tags_all": {
              "Name": "ec2-private-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0697b7c59c8d59a86"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.ec2_security_group",
            "module.vpc.aws_subnet.private_subnet_az1",
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:654654431182:instance/i-0d503697d8b7654ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d503697d8b7654ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mern-sai",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02ef6213149c9fb84",
            "private_dns": "ip-172-16-158-96.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.158.96",
            "public_dns": "ec2-3-93-6-132.compute-1.amazonaws.com",
            "public_ip": "3.93.6.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04ba0a94236228ce0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bf43b175dbaba17",
            "tags": {
              "Name": "ec2-private-instance-2"
            },
            "tags_all": {
              "Name": "ec2-private-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0697b7c59c8d59a86"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.ec2_security_group",
            "module.vpc.aws_subnet.private_subnet_az2",
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:654654431182:instance/i-0988611621e3b1b71",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0988611621e3b1b71",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mern-sai",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06344ab95962b86cc",
            "private_dns": "ip-172-16-7-197.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.7.197",
            "public_dns": "ec2-3-238-164-68.compute-1.amazonaws.com",
            "public_ip": "3.238.164.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03e8e1bcc9abc9f45",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049593c925831c9a5",
            "tags": {
              "Name": "ec2-public-instance-1"
            },
            "tags_all": {
              "Name": "ec2-public-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0697b7c59c8d59a86"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.ec2_security_group",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:654654431182:instance/i-0c90f7c0847ceec19",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c90f7c0847ceec19",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mern-sai",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-046cbeb4c32508ecc",
            "private_dns": "ip-172-16-24-212.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.24.212",
            "public_dns": "ec2-3-88-194-186.compute-1.amazonaws.com",
            "public_ip": "3.88.194.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0de2dbd1bbd5175fd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068e133e8fc45d97f",
            "tags": {
              "Name": "ec2-public-instance-2"
            },
            "tags_all": {
              "Name": "ec2-public-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0697b7c59c8d59a86"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.ec2_security_group",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654431182:internet-gateway/igw-02625d707a4bd11fd",
            "id": "igw-02625d707a4bd11fd",
            "owner_id": "654654431182",
            "tags": {
              "Name": "Org_infra-igw"
            },
            "tags_all": {
              "Name": "Org_infra-igw"
            },
            "vpc_id": "vpc-01b75da591fd179b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_res"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbbbcf70591320cd",
            "association_id": "eipassoc-060d580a7a8b73276",
            "connectivity_type": "public",
            "id": "nat-013ef6ac2df7fd35f",
            "network_interface_id": "eni-0ef5a44244737637f",
            "private_ip": "172.16.3.1",
            "public_ip": "44.207.110.7",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-049593c925831c9a5",
            "tags": {
              "Name": "nat gateway az1"
            },
            "tags_all": {
              "Name": "nat gateway az1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_for_nat_gateway_az1",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1eb730ebf9350de",
            "association_id": "eipassoc-0ca4274f3788b7ef3",
            "connectivity_type": "public",
            "id": "nat-0e0bcfa508f2ab74d",
            "network_interface_id": "eni-00b23dc10581c37b3",
            "private_ip": "172.16.29.178",
            "public_ip": "54.243.208.161",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-068e133e8fc45d97f",
            "tags": {
              "Name": "nat gateway az2"
            },
            "tags_all": {
              "Name": "nat gateway az2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_for_nat_gateway_az2",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654431182:route-table/rtb-04a44e63c2d97b0a9",
            "id": "rtb-04a44e63c2d97b0a9",
            "owner_id": "654654431182",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-013ef6ac2df7fd35f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table az1"
            },
            "tags_all": {
              "Name": "private route table az1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b75da591fd179b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_for_nat_gateway_az1",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway_az1",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654431182:route-table/rtb-0e3067c09418bc77e",
            "id": "rtb-0e3067c09418bc77e",
            "owner_id": "654654431182",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e0bcfa508f2ab74d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table az2"
            },
            "tags_all": {
              "Name": "private route table az2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b75da591fd179b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_for_nat_gateway_az2",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway_az2",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654431182:route-table/rtb-010ae853e12e596d6",
            "id": "rtb-010ae853e12e596d6",
            "owner_id": "654654431182",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02625d707a4bd11fd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "tags_all": {
              "Name": "public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b75da591fd179b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc_res"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az1_route_table_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4b4acb822019969",
            "route_table_id": "rtb-04a44e63c2d97b0a9",
            "subnet_id": "subnet-06c15331711522ba0"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_for_nat_gateway_az1",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway_az1",
            "module.vpc.aws_route_table.private_route_table_az1",
            "module.vpc.aws_subnet.private_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az2_route_table_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b4cb2ead9a9ed28",
            "route_table_id": "rtb-0e3067c09418bc77e",
            "subnet_id": "subnet-01bf43b175dbaba17"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_for_nat_gateway_az2",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway_az2",
            "module.vpc.aws_route_table.private_route_table_az2",
            "module.vpc.aws_subnet.private_subnet_az2",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0402c64eb2f04febb",
            "route_table_id": "rtb-010ae853e12e596d6",
            "subnet_id": "subnet-049593c925831c9a5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084f7f18b8ed2ef98",
            "route_table_id": "rtb-010ae853e12e596d6",
            "subnet_id": "subnet-068e133e8fc45d97f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654431182:subnet/subnet-06c15331711522ba0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c15331711522ba0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654431182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet az1"
            },
            "tags_all": {
              "Name": "private subnet az1"
            },
            "vpc_id": "vpc-01b75da591fd179b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654431182:subnet/subnet-01bf43b175dbaba17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bf43b175dbaba17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654431182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet az2"
            },
            "tags_all": {
              "Name": "private subnet az2"
            },
            "vpc_id": "vpc-01b75da591fd179b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654431182:subnet/subnet-049593c925831c9a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049593c925831c9a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654431182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az1"
            },
            "tags_all": {
              "Name": "public subnet az1"
            },
            "vpc_id": "vpc-01b75da591fd179b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654431182:subnet/subnet-068e133e8fc45d97f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068e133e8fc45d97f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654431182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az2"
            },
            "tags_all": {
              "Name": "public subnet az2"
            },
            "vpc_id": "vpc-01b75da591fd179b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_res",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_res",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654431182:vpc/vpc-01b75da591fd179b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-08a5de060783fcbad",
            "default_route_table_id": "rtb-00a118ab43f753cf4",
            "default_security_group_id": "sg-0d4ead3051695ed06",
            "dhcp_options_id": "dopt-0fd4c8685e52c976e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b75da591fd179b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a118ab43f753cf4",
            "owner_id": "654654431182",
            "tags": {
              "Name": "Org_infra-vpc"
            },
            "tags_all": {
              "Name": "Org_infra-vpc"
            }
          }
        }
      ]
    }
  ]
}